changed the header logo size, added font-weight, font-size and color for the launch header section.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
     <header class="headerContainer">
       <img class="headerLogo" src="images/logo.svg" />
     </header>
-    We are launching soon! Subscribe and get notified Notify Me &copy; Copyright
-    Ping. All rights reserved.
+    <h1 class="launchHeader">
+      We are launching <span class="launchSpan">soon!</span>
+    </h1>
+    Subscribe and get notified Notify Me &copy; Copyright Ping. All rights
+    reserved.
 
     <footer>
       <p class="attribution">
