added the notify me input and button with styling.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
     <h1 class="launchHeader">
       We are launching <span class="launchSpan">soon!</span>
     </h1>
-    Subscribe and get notified Notify Me &copy; Copyright Ping. All rights
-    reserved.
+    <h3 class="subHeader">
+      Subscribe and get notified
+    </h3>
+    <section class="inputSection">
+      <input class="notifyInput" placeholder="Your email address..." />
+      <button class="notifyButton">Notify Me</button>
+    </section>
+    &copy; Copyright Ping. All rights reserved.
 
     <footer>
       <p class="attribution">
