added the dashboard section, it includes styling that will set the desktop width of the image and places the image in the center.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
       <input class="notifyInput" placeholder="Your email address..." />
       <button class="notifyButton">Notify Me</button>
     </section>
+    <section class="dashboardSection">
+      <img
+        src="/images/illustration-dashboard.png"
+        alt="dashboard"
+        class="dashboardImg"
+      />
+    </section>
     &copy; Copyright Ping. All rights reserved.
 
     <footer>
