added the social section and copyright section.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="/public/styles//main.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
 
     <title>Frontend Mentor | Ping coming soon page</title>
 
@@ -47,8 +53,20 @@
         class="dashboardImg"
       />
     </section>
-    &copy; Copyright Ping. All rights reserved.
-
+    <section class="socialSection">
+      <div class="socialIcon">
+        <i class="fab fa-twitter socialColor"></i>
+      </div>
+      <div class="socialIcon">
+        <i class="fab fa-facebook-f socialColor"></i>
+      </div>
+      <div class="socialIcon">
+        <i class="fab fa-instagram socialColor"></i>
+      </div>
+    </section>
+    <section class="copySection">
+      <h6 class="copyHeader">&copy; Copyright Ping. All rights reserved.</h6>
+    </section>
     <footer>
       <p class="attribution">
         Challenge by
