--- a/index.html
+++ b/index.html
@@ -68,13 +68,19 @@
     </section>
     <section class="socialSection">
       <div class="socialIcon">
-        <i class="fab fa-twitter socialColor"></i>
+        <a href="https://twitter.com">
+          <i class="fab fa-twitter socialColor"></i>
+        </a>
       </div>
       <div class="socialIcon">
-        <i class="fab fa-facebook-f socialColor"></i>
+        <a href="https://facebook.com">
+          <i class="fab fa-facebook-f socialColor"></i>
+        </a>
       </div>
       <div class="socialIcon">
-        <i class="fab fa-instagram socialColor"></i>
+        <a href="https://instagram.com">
+          <i class="fab fa-instagram socialColor"></i>
+        </a>
       </div>
     </section>
     <section class="copySection">
@@ -85,7 +91,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://github.com/haeke">Edwin</a>.
       </p>
     </footer>
     <script src="public/js/validate.js"></script>
